--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <h1>The Movies List Program</h1>
-<button>Movies by Category</button>
-<button>Movies by Year</button>
-<button>Add Movie</button>
-<button>Delete Movie</button>
+<button onclick="window.location.href='/category';">Movies by Category</button>
+<button onclick="window.location.href='/year';">Movies by Year</button>
+<button onclick="window.location.href='/addMovie';">Add Movie</button>
+<button onclick="window.location.href='/deleteMovie';">Delete Movie</button>
