--- a/templates/movies_by_year.html
+++ b/templates/movies_by_year.html
@@ -2,16 +2,11 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "bootstrap/fixes.html" as fixes %}
 {% import "bootstrap/utils.html" as util %}
+{% import "header.html" as header%}
 
 {% block content %}
 {{util.flashed_messages(dismissible=True)}}
-<div class="container">
-  <h1>The Movies List Program</h1>
- <button>Movies by Category</button>
- <button>Movies by Year</button>
- <button>Add Movie</button>
- <button>Delete Movie</button>
-</div>
+{{header}}
 {% endblock %}
 
 {% block head %}
