--- a/templates/movies_by_category.html
+++ b/templates/movies_by_category.html
@@ -14,13 +14,13 @@
         <th>Movie Name</th>
         <th>Category Name</th>
     </tr>
-    {%- for data in content %}
+    {% for data in content %}
         <tr>
             <td>{{data.id}}</td>
             <td>{{data.name}}</td>
             <td>{{data.category.name}}</td>
         </tr>
-    {%- endfor %}
+    {% endfor %}
 </table>
 
 {% endblock %}
