Delete and Add works

--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -7,6 +7,39 @@
 {% block content %}
 {{util.flashed_messages(dismissible=True)}}
 {{header}}
+<form method="post" action="/addMovie">
+    <table border="5" cellpadding="5" align="center">
+        <tr>
+            <th>Category Id </th>
+            <th>:</th>
+            <td><select id="movieCategory" name="movieCategory">
+                {% for data in content %}
+                        <option value="{{data.id}}">{{data.name}}</option>
+                {% endfor %}
+            </select></td>
+        </tr>
+        <tr>
+            <th>Name</th>
+            <th>:</th>
+            <td><input type="text" id="movieName" name="movieName" maxlength="100"/></td>
+        </tr>
+        <tr>
+            <th>Year</th>
+            <th>:</th>
+            <td><input type="number" id="movieYear" name="movieYear" maxlength="100"/></td>
+        </tr>
+        <tr>
+            <th>Minutes</th>
+            <th>:</th>
+            <td><input type="number" id="movieMinutes" name="movieMinutes" maxlength="4"/></td>
+        </tr>
+        <tr>
+            <th><input type="submit" value="Add Movie"></th>
+            <th>:</th>
+            <th><input type="reset" value="Clear"></th>
+        </tr>
+    </table>
+</form>
 {% endblock %}
 
 {% block head %}
