--- a/templates/delete_movie.html
+++ b/templates/delete_movie.html
@@ -7,8 +7,25 @@
 {% block content %}
 {{util.flashed_messages(dismissible=True)}}
 {{header}}
-{% endblock %}
 
+<table align="center" border="5" cellpadding="5" cellspacing="5">
+    <tr>
+        <th>Movie Id</th>
+        <th>Movie Name</th>
+        <th>Category Name</th>
+        <td>Delete</td>
+    </tr>
+    {% for data in content %}
+        <tr>
+            <td>{{data.id}}</td>
+            <td>{{data.name}}</td>
+            <td>{{data.category.name}}</td>
+            <td><a href="/deleteMovieWithId?movieId={{data.id}}">delete</a></td>
+        </tr>
+    {% endfor %}
+</table>
+
+{% endblock %}
 {% block head %}
 {{super()}}
 {{fixes.ie8()}}
