--- a/templates/header.html
+++ b/templates/header.html
@@ -3,6 +3,7 @@
     <button onclick="window.location.href='/category';">Movies by Category</button>
     <button onclick="window.location.href='/year';">Movies by Year</button>
     <button onclick="window.location.href='/addMovie';">Add Movie</button>
+    <button onclick="window.location.href='/editMovie';">Edit Movie</button>
     <button onclick="window.location.href='/deleteMovie';">Delete Movie</button>
     <br/>
     <br/>
